ensure spacing/look consistency between actions and close button

--- a/src/components/calcite-notice/calcite-notice.scss
+++ b/src/components/calcite-notice/calcite-notice.scss
@@ -28,8 +28,8 @@
 }
 
 :host([scale="l"]) {
-  --calcite-notice-spacing-token-small: theme("spacing.5");
-  --calcite-notice-spacing-token-large: theme("spacing.6");
+  --calcite-notice-spacing-token-small: theme("spacing.4");
+  --calcite-notice-spacing-token-large: theme("spacing.5");
   @include slotted("title", "*", ".container") {
     @apply text-1-wrap mb-1;
   }
@@ -137,13 +137,13 @@
 }
 
 .notice-close {
-  @apply self-stretch bg-transparent border-none outline-none cursor-pointer text-color-3;
+  @apply flex items-center self-stretch bg-transparent border-none outline-none cursor-pointer text-color-3;
   @include notice-element-base;
   -webkit-appearance: none;
 
   &:hover,
   &:focus {
-    @apply bg-foreground-2;
+    @apply bg-foreground-2 text-color-1;
   }
 
   &:active {
